--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -73,6 +73,18 @@
         /* background-color: red; */
     }
 
+    header #home:active {
+        color: black;
+    }
+
+    header #home:visited {
+        color: black;
+    }
+
+    header #home:hover {
+        color: black;
+    }
+
     #section1 {
         width: 100%;
         height: 400vh;
