--- a/css/sub/1024px.css
+++ b/css/sub/1024px.css
@@ -46,7 +46,7 @@
         font-size: 50px;
         background-image: url('../../image/sub/logo.png');
         background-position: center;
-        background-size: 50% 50%;
+        /* background-size: 50% 50%; */
         background-repeat: no-repeat;
         /* background-color: pink; */
     }
